Se mejoraron muchas funciones

--- a/panel.html
+++ b/panel.html
@@ -9,6 +9,7 @@
     <link href='logo.ico' rel='shortcut icon' type='image/x-icon'/>
     <title>Recepción de pedidos</title>
     <link rel="stylesheet" type="text/css" href="css/jquery-ui.css">
+<!--     <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet" id="bootstrap-css"> -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
     <link href="vendor/datatables-plugins/dataTables.bootstrap.css" rel="stylesheet">
@@ -32,6 +33,7 @@
     <link rel="stylesheet" href="css/sexyradio.css">
   </head>
   <body>
+      
     <div id="wrapper">
       <nav class="navbar navbar-default navbar-static-top fixed" role="navigation" style="margin-bottom: 0">
         <div class="navbar-header">
