--- a/pedido.html
+++ b/pedido.html
@@ -102,9 +102,10 @@
             <!--<div class="loader"></div>-->
             <div id="panel" class="panel panel-primary">
               <div class="panel-heading">
-                <span id="numPedido" style="font-size: 30px; font-style: italic;" class="panel-title"></span><span id="fechaPedido" class="pull-right" style="font-size: 20px;"><!--Recibido Martes 13 de abril--></span>
+                <span id="clavePedido" style="font-size: 30px; font-style: italic;" class="panel-title"></span><span id="fechaPedido" class="pull-right" style="font-size: 20px;"><!--Recibido Martes 13 de abril--></span>
               </div>
               <div class="panel-body" id="contenedorDatos">
+                <p><small id="keyPedido">Id del pedido: </small></p>
                 <label id="tienda" for="">Tienda: </label>
                 <p class="lead"><small>Productos de este pedido:</small></p>
                 <div class="form-group">
@@ -300,8 +301,8 @@
       </div><!-- /.modal-dialog -->
     </div><!-- /.modal -->
     <!-- jQuery -->
-    <script src="js/jquery-3.2.1.min.js"></script>
-    <!-- <script>window.$ = window.jQuery = require('./js/jquery-3.2.1.min.js')</script> -->
+    <!-- <script src="js/jquery-3.2.1.min.js"></script> -->
+    <script>window.$ = window.jQuery = require('./js/jquery-3.2.1.min.js')</script>
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
     <script src="dist/js/bootstrap-select.js"></script>
     <script src="vendor/metisMenu/metisMenu.min.js"></script>
