--- a/pedidoHistorial.html
+++ b/pedidoHistorial.html
@@ -6,28 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link href='logo.ico' rel='shortcut icon' type='image/x-icon'/>
-
+    <link href='logo.ico' rel='shortcut icon' type='image/x-icon' />
     <title>Detalles del pedidos</title>
-
-    <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-    <!-- DataTables CSS -->
     <link href="vendor/datatables-plugins/dataTables.bootstrap.css" rel="stylesheet">
-
-    <!-- DataTables Responsive CSS -->
     <link href="vendor/datatables-responsive/dataTables.responsive.css" rel="stylesheet">
-    <!-- MetisMenu CSS -->
     <link href="vendor/metisMenu/metisMenu.min.css" rel="stylesheet">
-    <!-- Custom CSS -->
     <link href="dist/css/sb-admin-2.css" rel="stylesheet">
-    <!-- Morris Charts CSS -->
     <link href="vendor/morrisjs/morris.css" rel="stylesheet">
-    <!-- Custom Fonts -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
     <link rel="stylesheet" href="css/dragula.min.css">
     <link rel="stylesheet" href="css/bootstrap-datepicker.min.css">
     <link rel="stylesheet" href="css/bootstrap-datepicker3.min.css">
@@ -36,78 +25,78 @@
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+      <![endif]-->
   </head>
   <body>
-    <div id="wrapper">
-      <!-- Navigation -->
-      <nav class="navbar navbar-default navbar-static-top fixed" role="navigation" style="margin-bottom: 0">
+    <nav class="navbar">
+      <div class="container-fluid">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <img class="navbar-brand" id="logo" src="logo.png"></img>
-        </div>
-        <!-- /.navbar-header -->
-        <ul class="nav navbar-top-links navbar-right no-padding ">
-          <li id="campana" onclick="mostrarNotificaciones()" class="dropdown no-padding">
-            <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-              <!--<i class="fa fa-bell fa-fw"></i>-->
-              <i class="fa fa-bell-o" style="font-size: 25px;" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="Notificaciones"></i>
+          <a class="navbar-brand" href="#">
+            <img style="max-width: 50px; margin-top: -7px;" src="logo.png"></img>
+          </a>
+          <a class="navbar-brand" href="#">Sistema de pedidos</a>
+          <a class="navbar-brand" href="panel.html">
+            <span class="material-icons no-padding" data-toggle="tooltip" data-placement="bottom" title="Volver al panel">dvr</span>
+          </a>
+          <div id="campana" onclick="mostrarNotificaciones()" class="navbar-brand dropdown">
+            <a class="links-panel" class="dropdown-toggle" data-toggle="dropdown" href="#">
+              <i class="textnavbar fa fa-bell-o" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="Notificaciones"></i>
               <span id="spanNotificaciones" style="background-color: red; display: none;" class="badge"></span>
               <i class="fa fa-caret-down"></i>
             </a>
             <ul id="contenedorNotificaciones" class="dropdown-menu dropdown-alerts">
-              <!--Notificaciones aquí-->
+
             </ul>
-            <!--<div id="spanNotificaciones" style="display:none; background-color:red; color:white; border-radius:5px; padding:10%;  font-size:10px; font-family: intelo-bold; transform:translate(10px, -22px);"></div>-->
-          </li>
-          <li><img src="http://lorempixel.com/40/40/" alt="..." class="img-circle"> </li>
-          <li class="dropdown no-padding">
-            <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+          </div>
+          <a href="" class="navbar-brand" id="btnPerfil">
+            <img src="http://lorempixel.com/25/25/" alt="..." class="img-circle" data-toggle="tooltip" data-placement="bottom" title="Perfil">
+          </a>
+          <div class="navbar-brand dropdown">
+            <a class="links-panel dropdown-toggle" data-toggle="dropdown" href="#">
+              <i class="fa fa-sign-out" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="Cerrar sesión"></i>
               <i class="fa fa-caret-down"></i>
             </a>
             <ul class="dropdown-menu dropdown-alerts">
               <li class="divider"></li>
               <li>
-                <a onclick="logout()"><span class="glyphicon glyphicon-off"></span> Cerrar sesión</a>
+                <a onclick="logout()">
+                  <span class="glyphicon glyphicon-off"></span> Cerrar sesión</a>
               </li>
             </ul>
-            <!-- /.dropdown-alerts -->
-          </li>
-          <!-- /.dropdown -->
-        </ul>
-        <!-- /.navbar-top-links -->
-      </nav>
-      <div class="barside">
-        <img class="navbar-brand" id="logo" src="logo.png"></img>
-        <ul style="margin-top:50px; list-style:none; font-size:50px; color:white; padding:28px;">
-          <li>
-            <a style="color:white; text-decoration: none;" href="panel.html" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-              <span style="font-size:50px;" class="material-icons no-padding">dvr</span>
-              <p style="white; font-size:11px; width:200px; margin-left:-14px; margin-top:-15px;">Volver al panel</p>
-            </a>
-          </li>
-        </ul>
+          </div>
+        </div>
       </div>
-      <div id="page-wrapper">
+    </nav>
+    <div id="wrapper">
+      <div class="container-fluid">
         <div class="row">
-          <div class="col-lg-12 col-md-12 col-sm-12"><br>
+          <div class="col-lg-12 col-md-12 col-sm-12">
+            <br>
             <!--<div class="loader"></div>-->
             <div id="panel" class="panel panel-primary">
               <div class="panel-heading">
-                <span id="numPedido" style="font-size: 30px; font-style: italic;" class="panel-title"></span><span id="fechaPedido" class="pull-right" style="font-size: 20px;"><!--Recibido Martes 13 de abril--></span>
+                <span id="numPedido" style="font-size: 30px; font-style: italic;" class="panel-title"></span>
+                <span id="fechaPedido" class="pull-right" style="font-size: 20px;">
+                  <!--Recibido Martes 13 de abril-->
+                </span>
               </div>
               <div class="panel-body" id="contenedorDatos">
                 <label id="tienda" for="">Tienda: </label>
-                <p class="lead"><small>Productos de este pedido:</small></p>
+                <p class="lead">
+                  <small>Productos de este pedido:</small>
+                </p>
                 <div class="form-group">
-                  <label class="lead"><small>Cantidad: </small><span id="cantidad" class="badge"></span></label>
+                  <label class="lead">
+                    <small>Cantidad: </small>
+                    <span id="cantidad" class="badge"></span>
+                  </label>
                 </div>
               </div>
               <table id="productos" class="table table-condensed table-bordered table-striped table-hover">
@@ -130,26 +119,28 @@
                 </tbody>
               </table>
             </div>
-            <button id="Imprimir" onclick="generarPDF();" class="btn btn-lg btn-danger"><i class="fa fa-print" aria-hidden="true"></i> Imprimir</button>
-          </div><!-- /.col-lg-12 -->
-        </div><!-- /.row -->
-      </div><!-- /#page-wrapper -->
-    </div><!-- /#wrapper -->
+            <button id="Imprimir" onclick="generarPDF();" class="btn btn-lg btn-danger">
+              <i class="fa fa-print" aria-hidden="true"></i> Imprimir</button>
+          </div>
+          <!-- /.col-lg-12 -->
+        </div>
+        <!-- /.row -->
+      </div>
+    </div>
+    <!-- /#wrapper -->
     <!-- jQuery -->
-    <!-- <script src="js/jquery-3.2.1.min.js"></script> -->
+    <!--<script src="js/jquery-3.2.1.min.js"></script>-->
     <script>window.$ = window.jQuery = require('./js/jquery-3.2.1.min.js')</script>
-
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
     <script src="dist/js/bootstrap-select.js"></script>
-
     <!-- Bootstrap Core JavaScript -->
     <!--<script src="vendor/bootstrap/js/bootstrap.min.js"></script>-->
     <!-- Metis Menu Plugin JavaScript -->
     <script src="vendor/metisMenu/metisMenu.min.js"></script>
     <!-- Morris Charts JavaScript -->
     <!-- <script src="vendor/raphael/raphael.min.js"></script>
-    <script src="vendor/morrisjs/morris.min.js"></script>
-    <script src="data/morris-data.js"></script> -->
+      <script src="vendor/morrisjs/morris.min.js"></script>
+      <script src="data/morris-data.js"></script> -->
     <script src="vendor/datatables/js/jquery.dataTables.min.js"></script>
     <script src="vendor/datatables-plugins/dataTables.bootstrap.min.js"></script>
     <script src="vendor/datatables-responsive/dataTables.responsive.js"></script>
