Se implementó localforage

--- a/pedidoHistorial.html
+++ b/pedidoHistorial.html
@@ -170,6 +170,7 @@
     <script src="js/moment-with-locales.js"></script>
     <script src="js/jspdf.min.js"></script>
     <script src="js/jspdf.plugin.autotable.js"></script>
+    <script src="js/localforage.min.js"></script>
     <script src="js/pedidoHistorial.js"></script>
   </body>
 </html>
