--- a/pedidoPadre.html
+++ b/pedidoPadre.html
@@ -246,7 +246,8 @@
     <script src="js/buttons.print.min.js"></script>
     <script src="js/buttons.bootstrap.js"></script>
     <script src="js/buttons.html5.min.js"></script>
-    <script src="js/pedidoPadre.js"></script>
+    <script src="js/localforage.min.js"></script>
     <script src="js/moment-with-locales.js"></script>
+    <script src="js/pedidoPadre.js"></script>
   </body>
 </html>
