--- a/pedido.html
+++ b/pedido.html
@@ -312,8 +312,8 @@
     </div>
     <!-- /.modal -->
     <!-- jQuery -->
-    <!-- <script src="js/jquery-3.2.1.min.js"></script> -->
-    <script>window.$ = window.jQuery = require('./js/jquery-3.2.1.min.js')</script>
+    <script src="js/jquery-3.2.1.min.js"></script>
+    <!-- <script>window.$ = window.jQuery = require('./js/jquery-3.2.1.min.js')</script> -->
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
     <script src="dist/js/bootstrap-select.js"></script>
     <script src="vendor/metisMenu/metisMenu.min.js"></script>
@@ -353,6 +353,7 @@
     <script src="js/buttons.print.min.js"></script>
     <script src="js/buttons.bootstrap.js"></script>
     <script src="js/buttons.html5.min.js"></script>
+    <script src="js/localforage.min.js"></script>
     <script src="js/pedido.js"></script>
   </body>
 </html>
