--- a/login.html
+++ b/login.html
@@ -52,8 +52,8 @@
       </div><!--col-sm-8-->
     </div><!--container-->
     <!-- <script src="./node_modules/jquery/dist/jquery.min.js"></script> -->
-    <script src="js/jquery-3.2.1.min.js"></script>
-    <!-- <script>window.$ = window.jQuery = require('./js/jquery-3.2.1.min.js')</script> -->
+    <!-- <script src="js/jquery-3.2.1.min.js"></script> -->
+    <script>window.$ = window.jQuery = require('./js/jquery-3.2.1.min.js')</script>
     <!-- <script src="js/index.min.js"></script> -->
   </body>
 </html>
