--- a/pedidoHistorial.html
+++ b/pedidoHistorial.html
@@ -89,6 +89,7 @@
               </div>
               <div class="panel-body" id="contenedorDatos">
                 <label id="tienda" for="">Tienda: </label>
+                <p id="coordinador">Coordinador(a):</p>
                 <p class="lead">
                   <small>Productos de este pedido:</small>
                 </p>
@@ -130,7 +131,11 @@
     <!-- /#wrapper -->
     <!-- jQuery -->
     <!-- <script src="js/jquery-3.2.1.min.js"></script> -->
-    <script>window.$ = window.jQuery = require('./js/jquery-3.2.1.min.js')</script>
+    <!-- <script>window.$ = window.jQuery = require('./js/jquery-3.2.1.min.js')</script> -->
+    <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
+    <script src="js/jquery-3.2.1.min.js"></script>
+    <script>if (window.module) module = window.module;</script>
+
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
     <script src="dist/js/bootstrap-select.js"></script>
     <!-- Bootstrap Core JavaScript -->
