Se va a cambiar la manera de mostrar pedidos, se volverá a usar firebase directo y no localStorage

--- a/panel.html
+++ b/panel.html
@@ -51,6 +51,9 @@
           <a class="navbar-brand" href="tickets.html">
             <span class="textnavbar material-icons" data-toggle="tooltip" data-placement="bottom" title="Tickets">receipt</span>
           </a>
+          <a class="navbar-brand" href="agregarProducto.html">
+            <span class="fa fa-plus-square" data-toggle="tooltip" data-placement="bottom" title="Agregar producto"></span>
+          </a>
           <a class="navbar-brand" href="estadisticas.html">
             <span class="fa fa-line-chart" data-toggle="tooltip" data-placement="bottom" title="Estadísticas"></span>
           </a>
@@ -83,7 +86,7 @@
         </div>
       </div>
     </nav>
-    <div id="wrapper">
+    <div class="app" id="wrapper">
       <div class="container-fluid">
         <div class="row">
           <ul class="nav nav-pills nav-justified" style="padding:30px;">
@@ -113,7 +116,7 @@
               <div class="container-fluid">
                 <div id="loaderPedidos" class="loader"></div>
                 <div class="panel panel-default">
-                  <div class="panel-body">
+                  <div class="panel-body"> 
                     <table width="100%" id="tablaPedidos" class="table-hover table table-condensed table-bordered table-striped" style="margin-top:15px;">
                       <thead>
                         <tr>
