--- a/estadisticas.html
+++ b/estadisticas.html
@@ -30,6 +30,17 @@
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+  <style>
+    .fade-enter-active,
+    .fade-leave-active {
+      transition: opacity .5s
+    }
+
+    .fade-enter,
+    .fade-leave-to {
+      opacity: 0
+    }
+  </style>
 </head>
 <body>
   <nav class="navbar">
@@ -86,6 +97,7 @@
       <ul class="nav nav-tabs" role="tablist">
         <li role="presentation" class="active"><a href="#panePedidos" aria-controls="panePedidos" role="tab" data-toggle="tab">Pedidos</a></li>
         <li role="presentation"><a href="#paneProductos" aria-controls="paneProductos" role="tab" data-toggle="tab">Productos</a></li>
+        <li role="presentation"><a href="#paneGraficas" aria-controls="paneGraficas" role="tab" data-toggle="tab">Gráficas</a></li>
       </ul>
       <div class="tab-content">
         <div role="tabpanel" class="tab-pane active" id="panePedidos">
@@ -180,6 +192,34 @@
         <div role="tabpanel" class="tab-pane" id="paneProductos">
           <div class="panel panel-default">
             <div class="panel-body" id="appProductos">
+                <!-- <transition name="fade">
+                <div class="row">
+                    <div class="col-lg-12">
+                      <table class="table table-striped table-condensed table-hover">
+                        <thead>
+                          <tr>
+                              <th>Clave</th>
+                              <th>Fecha</th>
+                              <th>Nombre</th>
+                              <th>Total Kilos</th>
+                              <th>Total Piezas</th>
+                              <th>Zona</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr v-for="producto in vueProductos">
+                            <td>{{ producto.clave }}</td>
+                            <td>{{ producto.fecha }}</td>
+                            <td>{{ producto.nombre }}</td>
+                            <td>{{ producto.totalKilos }}</td>
+                            <td>{{ producto.totalPiezas }}</td>
+                            <td>{{ producto.zona }}</td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    </div>
+                  </div>
+                  </transition> -->
               <div class="row">
                 <div class="col-lg-8 col-md-8 col-sm-8">
                   <form class="form-inline">
@@ -272,6 +312,83 @@
             </div>
           </div>
         </div>
+        <div role="tabpanel" class="tab-pane active" id="paneGraficas">
+          <div class="panel panel-default">
+            <div class="panel-body">
+              <div class="row">
+                <div class="col-lg-4 col-md-4 col-sm-4">
+                  <form class="form-inline">
+                    <div class="form-group">
+                      <label for="claveGrafica">Producto:</label>
+                      <select type="" class="form-control" id="claveGrafica">
+                        <option selected disabled value="">Seleccionar</option>
+                        <option value="PT-01-01">PT-01-01</option>
+                        <option value="PT-01-02">PT-01-02</option>
+                        <option value="PT-02-01">PT-02-01</option>
+                        <option value="PT-04-01">PT-04-01</option>
+                        <option value="PT-07-01">PT-07-01</option>
+                        <option value="PT-10-01">PT-10-01</option>
+                      </select>
+                    </div>
+                    <button type="button" id="btnGenerar" class="btn btn-default">Generar</button>
+                  </form><br>
+                  <div class="panel panel-default">
+                    <div class="panel-body">
+
+                      <canvas id="graficaProductos" width="400" height="400"></canvas>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-4">
+                  <form class="form-inline">
+                    <div class="form-group">
+                      <label for="claveGrafica">Zona:</label>
+                      <select type="" class="form-control" id="claveGrafica">
+                        <option selected disabled value="">Seleccionar</option>
+                        <option value="PT-01-01">PT-01-01</option>
+                        <option value="PT-01-02">PT-01-02</option>
+                        <option value="PT-02-01">PT-02-01</option>
+                        <option value="PT-04-01">PT-04-01</option>
+                        <option value="PT-07-01">PT-07-01</option>
+                        <option value="PT-10-01">PT-10-01</option>
+                      </select>
+                    </div>
+                    <button type="button" id="btnGenerar" class="btn btn-default">Generar</button>
+                  </form><br>
+                  <div class="panel panel-default">
+                    <div class="panel-body">
+  
+                      <canvas id="graficaPedidos" width="400" height="400"></canvas>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-4">
+                  <form class="form-inline">
+                    <div class="form-group">
+                      <label for="claveGrafica">Zona:</label>
+                      <select type="" class="form-control" id="claveGrafica">
+                        <option selected disabled value="">Seleccionar</option>
+                        <option value="PT-01-01">PT-01-01</option>
+                        <option value="PT-01-02">PT-01-02</option>
+                        <option value="PT-02-01">PT-02-01</option>
+                        <option value="PT-04-01">PT-04-01</option>
+                        <option value="PT-07-01">PT-07-01</option>
+                        <option value="PT-10-01">PT-10-01</option>
+                      </select>
+                    </div>
+                    <button type="button" id="btnGenerar" class="btn btn-default">Generar</button>
+                  </form><br>
+                  <div class="panel panel-default">
+                    <div class="panel-body">
+  
+                      <canvas id="graficaPedidos" width="400" height="400"></canvas>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div><!-- /#wrapper -->
@@ -322,7 +439,9 @@
   <script src="js/buttons.html5.min.js"></script>
   <script src="js/localforage.min.js"></script>
   <script src="js/vue.js"></script>
+  <script src="https://unpkg.com/vuefire/dist/vuefire.js"></script>
   <script src="https://unpkg.com/vue2-datatable-component/dist/min.js"></script>
+  <script src="js/Chart.min.js"></script>
   <script src="babel/estadisticas.js"></script>
   <script src="js/estadisticasvue.js"></script>
 </body>
